[package]
name = "quest_emu" #QEMU!
version = "0.1.0"
edition = "2024"

[features]
default = ["ureq", "clap"]
ureq = ["dep:ureq"]

# Use reqwest for HTTP requests
# MBF-Agent uses ureq, so this will bloat the binary a bit.
reqwest = ["dep:reqwest"]
clap = []

[dependencies]
# No need for tracing support
color-eyre = { version = "0.6", default-features = false }

# progress bar
pbr = { version = "*" } #{ git = "https://github.com/a8m/pb.git" }

bytes = "*"
reqwest = { version = "0.12", features = [
    "blocking",
    "gzip",
    "deflate",
    "rustls-tls",
], default-features = false, optional = true }

ureq = { version = "3", features = [
    "socks-proxy",
    "charset",
    "gzip",
], optional = true }

# For APKs, the zip crate doesn't align the way V2 signature for Android requires. We use Laurie's amazing work here.
mbf-zip = { git = "https://github.com/Lauriethefish/ModsBeforeFriday.git", package = "mbf-zip", branch = "main" }
mbf-axml = { git = "https://github.com/Lauriethefish/ModsBeforeFriday.git", package = "mbf-axml", branch = "main" }
mbf-res-man = { git = "https://github.com/Fernthedev/ModsBeforeFriday.git", package = "mbf-res-man", branch = "mbf-agent-man-more" }

clap = { version = "4", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

owo-colors = "4"
dirs = "6.0.0"

zip = { version = "6", default-features = false, features = [
    "zstd",
    "nt-time",
    "deflate",
    "deflate-flate2",
    "deflate-zopfli",
    "deflate64",
    "lzma",
    "bzip2",
] }

walkdir = "2"
symlink = "0.1.0"
fs_extra = "1.2"
itertools = "0.14"
indicatif = "0.18"
dialoguer = "0.12"

xml = "0.8"
byteorder = "1.5"
semver = "1.0"


[profile.release]
opt-level = 3
lto = true
strip = "symbols"
